[package]
name = "yarnspinner"
description = "an experimental rust port of the yarnspinner dialog engine"
documentation = "https://docs.rs/yarnspinner"
homepage = "https://github.com/tinaun/yarnspinner-rs"
version = "0.1.0"
authors = ["tinaun <tinagma@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.11"
thiserror = "1.0"